# SW

./: .gitignore  CHANGELOG  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: 01-classic.py  02-qcnoiseless.py  03-qcnoisy.py  __init__.py  heisenbergqc_noiseless.py  heisenbergqc_noisy.py~  sw_classic.py  swqc_noiseless.py  swqc_noisy.py
sw/: __init__.py
sw/solver/: heisenbergqc.py  sw.py  swqc.py
sw/tools/: circuits.py  measurements.py  qc_operators.py  tools.py
